dataset1235/2025-2/610742602/users/1980422981/executions/677928262_1927446959.log
== SUBMISSION (2025-08-26 21:12:25)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:15:00)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:15:01)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:15:35)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2))
print(round (n-n *(63/100),2))
      


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:12:24)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:11:58)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2)
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:15:00)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:14:59)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:12:24)
-- CODE: 
n= float(input())
print(round (n* (27/100),2))
print(round (n*(42/100)+n,2)
print(round (n-n *(63/100,2))
      


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 4
    print(round (n-n *(63/100,2))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
